--- a/pub/index.html
+++ b/pub/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/responsive-styles.min.css" />
   <script src="https://kit.fontawesome.com/c453b5bdda.js" crossorigin="anonymous"></script>
   <title>AndriiZ-CSS</title>
 
@@ -92,7 +92,7 @@
     <ul class="recent-project-list-all">
       <li class="recent-project-list">
         <div class="recent-project-img-title">
-        <img src="./src/image/2.jpg"
+        <img src="images/2.jpg"
              min-width="250" min-height="160"
         />
           <h3>Portfolio One</h3>
@@ -101,7 +101,7 @@
       </li>
       <li class="recent-project-list">
         <article class="recent-project-img-title">
-        <img src="./src/image/3.jpg"
+        <img src="images/3.jpg"
              min-width="250" min-height="160"
         />
           <h3>Portfolio Two</h3>
@@ -110,7 +110,7 @@
       </li>
       <li class="recent-project-list">
         <article class="recent-project-img-title">
-        <img src="./src/image/4.jpg"
+        <img src="images/4.jpg"
              min-width="250" min-height="160"
         />
           <h3>Portfolio Three</h3>
@@ -119,7 +119,7 @@
       </li>
       <li class="recent-project-list">
         <article class="recent-project-img-title">
-        <img src="./src/image/5.jpg"
+        <img src="images/5.jpg"
              min-width="250" min-height="160"
         />
           <h3>Portfolio Four</h3>
@@ -163,6 +163,6 @@
       <h2>Copyright © 2015 Default Value.</h2>
     </div>
   </footer>
-<script src="./index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
