#5 fix: added style

--- a/pub/index.html
+++ b/pub/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body id="body">
-<header>
+<header id="Home">
   <div class="logo-header">
     <a href="/"
     ><span class="logo-header-first">UI</span
@@ -25,11 +25,11 @@
   </div>
   <div class="modal-header-hamburger">
     <ul class="modal-header-container">
-      <li><a href="/">Home</a></li>
-      <li><a href="#AboutUs">About Us</a></li>
-      <li><a href="#Services">Services</a></li>
-      <li><a href="#Portfolio">Portfolio</a></li>
-      <li><a href="#ContactUs">Contact Us</a></li>
+      <li tabindex="1"><a href="#Home">Home</a></li>
+      <li tabindex="1"><a href="#AboutUs">About Us</a></li>
+      <li tabindex="1"><a href="#Services">Services</a></li>
+      <li tabindex="1"><a href="#Portfolio">Portfolio</a></li>
+      <li tabindex="1"><a href="#ContactUs">Contact Us</a></li>
     </ul>
   </div>
 </header>
@@ -91,13 +91,13 @@
     <p class="recent-project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore eturet dolore magna aliqua.</p>
     <ul class="recent-project-list-all">
       <li class="recent-project-list">
-        <div class="recent-project-img-title">
+        <article class="recent-project-img-title">
         <img src="images/2.jpg"
              min-width="250" min-height="160"
         />
           <h3>Portfolio One</h3>
           <p>Lorem ipsum dolor sit amet.</p>
-        </div>
+        </article>
       </li>
       <li class="recent-project-list">
         <article class="recent-project-img-title">
